--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "next-cloudinary": "^6.17.5",
     "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
